fixed the spacing of messages on the chatpage

--- a/guideBot/src/app/chatpage/chatpage.component.css
+++ b/guideBot/src/app/chatpage/chatpage.component.css
@@ -53,7 +53,8 @@ ul{
 }
 
 .user {
-  display:inline-block;
+  display:table;
+  margin-right:auto;
   padding:10px;
   border-radius:5px;
   border-bottom-left-radius:0px;
@@ -64,10 +65,10 @@ ul{
 
 .bot {
   padding:10px;
+  display:table;
+  margin-left:auto;
   border-radius:5px;
   background:#DBDBDB;
-  margin-right:0px;
-  margin-left:auto;
   border-bottom-right-radius:0px;
   max-width:50%;
 }
